[package]
name = "txn_lock"
version = "0.8.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Utilities to support transactional versioning"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["transaction", "transactional", "lock", "version", "versioning"]
categories = ["concurrency", "data-structures"]

[features]
all = ["hr-id", "logging"]
id = ["hr-id"]
logging = ["log"]

[dependencies]
collate = "0.3"
ds-ext = { path = "../ds-ext" }
hr-id = { path = "../hr-id", optional = true }
futures = "0.3"
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
tokio = { version = "1.33", features = ["sync"] }

[dev-dependencies]
futures = "0.3"
